import React from 'react';
import { render, screen, fireEvent, waitFor } from '@testing-library/react';
import userEvent from '@testing-library/user-event';
import Hero from '../Hero';

// Mock framer-motion for testing
jest.mock('framer-motion', () => ({
  motion: {
    div: 'div',
    button: 'button',
    span: 'span',
    p: 'p',
    h1: 'h1'
  },
  AnimatePresence: ({ children }: { children: React.ReactNode }) => <>{children}</>,
  useMotionValue: () => ({
    get: () => 0,
    set: jest.fn(),
  }),
  useTransform: () => ({
    get: () => 0,
    set: jest.fn(),
  }),
  useSpring: () => ({
    get: () => 0,
    set: jest.fn(),
  }),
}));

// Mock Next.js router
jest.mock('next/navigation', () => ({
  useRouter: () => ({
    push: jest.fn(),
    prefetch: jest.fn(),
  }),
}));

describe('Hero', () => {
  const defaultProps = {};

  beforeEach(() => {
    jest.clearAllMocks();
  });

  describe('Rendering', () => {
    it('renders without crashing', () => {
      render(<Hero {...defaultProps} />);
    });

    it('renders with correct structure', () => {
      const { container } = render(<Hero {...defaultProps} />);
      expect(container.firstChild).toBeInTheDocument();
    });

  });

  describe('State Management', () => {
    it('manages internal state correctly', () => {
      render(<Hero {...defaultProps} />);
      // Test initial state
      // Add specific state assertions based on your component
    });

    it('updates state on user interaction', async () => {
      const user = userEvent.setup();
      render(<Hero {...defaultProps} />);
      
      // Simulate user interaction that changes state
      // Add specific interactions based on your component
    });
  });

  describe('Event Handling', () => {
    it('calls onMouseMove when triggered', async () => {
      const onMouseMove = jest.fn();
      const user = userEvent.setup();
      
      render(<Hero {...defaultProps} />);
      
      const elements = screen.getAllByRole('button');
      const element = elements[0]; // Adjust selector as needed
      await user.click(element);
      
      // Component handles mouse move internally
      expect(element).toBeInTheDocument();
    });

    it('calls onDelay when triggered', async () => {
      const onDelay = jest.fn();
      const user = userEvent.setup();
      
      render(<Hero {...defaultProps} />);
      
      const elements = screen.getAllByRole('button');
      const element = elements[0]; // Adjust selector as needed
      await user.click(element);
      
      // Component handles delay internally
      expect(element).toBeInTheDocument();
    });

    it('calls onClick when triggered', async () => {
      const user = userEvent.setup();
      
      render(<Hero {...defaultProps} />);
      
      const elements = screen.getAllByRole('button');
      const element = elements[0]; // Adjust selector as needed
      await user.click(element);
      
      // Component handles click internally
      expect(element).toBeInTheDocument();
    });

  });

  describe('Form Interactions', () => {
    it('handles button clicks', async () => {
      const user = userEvent.setup();
      render(<Hero {...defaultProps} />);
      
      const button = screen.getByRole('button');
      await user.click(button);
      
      // Component handles click internally
      expect(button).toBeInTheDocument();
    });

  });

  describe('Animations', () => {
    it('renders motion components correctly', () => {
      render(<Hero {...defaultProps} />);
      // Motion components should render as regular divs in test environment
      expect(screen.getAllByRole('generic')[0]).toBeInTheDocument();
    });

    it('handles animation state changes', async () => {
      render(<Hero {...defaultProps} />);
      
      // Test animation triggers
      await waitFor(() => {
        // Add specific animation assertions
      });
    });
  });

  describe('Snapshot', () => {
    it('matches snapshot', () => {
      const { container } = render(<Hero {...defaultProps} />);
      expect(container.firstChild).toMatchSnapshot();
    });

    it('matches snapshot with different props', () => {
      const testProps = {
        ...defaultProps,
        // Add variant props for comprehensive snapshot testing
      };
      const { container } = render(<Hero {...testProps} />);
      expect(container.firstChild).toMatchSnapshot();
    });
  });

});